--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,8 @@
 
   function checkProtocol() {
     // display warning if page has not been loaded through HTTP protocol (usually that means file://)
-    if (!window.location.protocol.startsWith('http')) {
-      const warning = document.getElementById('http_warning');
-      warning.classList.remove('hide');
+     if (!window.location.protocol.startsWith('http')) {
+       warning('You need to open this file through an HTTP server, otherwise WASM fails to load. See <a href="https://github.com/haplo/webpgf">README</a> for instructions.');
     }
   }
 
@@ -39,7 +38,18 @@
     });
   }
 
-  window.onload = init;
+   window.onload = init;
+
+   function warning(message) {
+     const warning = document.getElementById('warning');
+     if (message) {
+       warning.innerHTML = message;
+       warning.classList.remove('hide');
+     } else {
+       warning.innerHTML = '';
+       warning.classList.add('hide');
+     }
+   }
 
   function decodePGF(pgf_data, canvas_id) {
     if (!decode) {
@@ -67,9 +77,16 @@
     }
   }
 
-  async function loadfile(filename, canvas_id) {
-    const resp = await fetch(filename);
-    const pgf_data = await resp.arrayBuffer();
+   async function loadfile(file_input_id, canvas_id) {
+    const file_input = document.getElementById(file_input_id);
+    const file = file_input.files[0];
+    if (!file) {
+      warning('You must select a file.');
+      return;
+    }
+    warning('');
+    const pgf_data = await file.arrayBuffer();
+    console.log(pgf_data);
     decodePGF(pgf_data, canvas_id);
   }
   </script>
@@ -84,11 +101,12 @@
     WASM version of the PGF decoder, using libpgf compiled with <a href="https://emscripten.org/">Emscripten</a>.
   </p>
 
-  <p id="http_warning" class="hide warning">You need to open this file through an HTTP server, otherwise WASM fails to load. See <a href="https://github.com/haplo/webpgf">README</a> for instructions.</p>
+  <p id="warning" class="hide warning"></p>
 
   <p id="image_buttons">
+    <input type="file" name="image_file" id="image_file">
     <input type="button" value="Test image!"
-           onclick="loadfile('../pgf-images/rgb_lossy.PGF', 'output_canvas')">
+           onclick="loadfile('image_file', 'output_canvas')">
   </p>
   <p id="timing">Timing: N/A</p>
   <canvas id="output_canvas">Your browser does not support canvas</canvas>
