Use release build in demo

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
        padding: 1em;
    }
   </style>
-  <!-- Repalce with webpgf.js to test the release version -->
-  <script type="text/javascript" src="../dist/webpgf_debug.js"></script>
+  <!-- Replace with webpgf_debug.js to test the debug version -->
+  <script type="text/javascript" src="../dist/webpgf.js"></script>
   <script type="text/javascript">
   'use strict';
 
